<resources>
    <string name="app_name">Schedule</string>
    <string name="menu_days">Days</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="start_time">Start time:</string>
    <string name="finish_time">Finish time:</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="event_name">Name:</string>
    <string name="add_event">Add event</string>
    <string name="repeat">Repeat:</string>
    <string name="everyday">Everyday</string>
    <string name="mon_to_fri">Mon to Fri</string>
    <string name="weekends">Weekends</string>
    <string name="custom">Custom</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="event_delete">Delete event</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_event">Edit event</string>
    <string name="sure_delete_event">Are you really want to delete this event?</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="ukraine">Українська</string>
    <string name="english">English</string>
    <string name="to_end">To end</string>
    <string name="to_start">To start</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="vibro">Vibo mode:</string>
    <string name="next_event">Next</string>
    <string name="note">Note</string>
    <string name="edit">Edit</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop Service</string>
    <string name="color">Color:</string>
    <string name="add_schedule">Add schedule</string>
    <string name="share">Share</string>
    <string name="select_days">Select days</string>
    <string name="enter_name">Enter the name</string>
    <string name="notification">Notification</string>
    <string name="change_settings">Change settings</string>
    <string name="vibro_notification">Vibro notification</string>
    <string name="language">Language</string>
    <string name="russian">Русский</string>
    <string name="number_repeat">Nuber of repeating:</string>
    <string name="date">Date:</string>
    <string name="none">---</string>
    <string name="main">Main</string>
    <string name="other">Other</string>
    <string name="system_settings">System settings</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="wifi" translatable="false">Wi-Fi</string>
    <string name="bluetooth" translatable="false">Bluetooth</string>
    <string name="mobile_data">Mobile data</string>
    <string name="first_schedule">Press plus to add a new weekly Schedule.</string>
    <string name="first_event">Press plus to create new event.</string>
    <string name="sure_delete_schedule">Are you sure to delete this schedule?</string>
    <string name="sure_delete_photo">Are you sure to delete this photo?</string>
    <string name="was_added">was added.</string>
    <string name="question_number_repeat">When the program repeats this number of times, it will be automatically deleted. Zero means an infinite number.</string>
    <string name="question_date">This is the date when the event is created.</string>

</resources>
